--- a/src/index.html
+++ b/src/index.html
@@ -530,14 +530,18 @@
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Цена</p>
                 <p class="swiper-slide__list-item-descr">
-                  Бесплатно
+                  1000
+                  <span class="swiper-slide__list-item-descr-valute">
+                    ₽
+                  </span>
                 </p>
               </li>
 
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Срок</p>
                 <p class="swiper-slide__list-item-descr">
-                  30-120мин
+                  30-120
+                  <span class="swiper-slide__list-item-descr-time">мин</span>
                 </p>
               </li>
             </ul>
@@ -567,14 +571,18 @@
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Цена</p>
                 <p class="swiper-slide__list-item-descr">
-                  1000Р
+                  1000
+                  <span class="swiper-slide__list-item-descr-valute">
+                    ₽
+                  </span>
                 </p>
               </li>
 
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Срок</p>
                 <p class="swiper-slide__list-item-descr">
-                  30-120мин
+                  30-120
+                  <span class="swiper-slide__list-item-descr-time">мин</span>
                 </p>
               </li>
             </ul>
@@ -611,7 +619,8 @@
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Срок</p>
                 <p class="swiper-slide__list-item-descr">
-                  30мин
+                  30
+                  <span class="swiper-slide__list-item-descr-time">мин</span>
                 </p>
               </li>
             </ul>
@@ -641,14 +650,18 @@
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Цена</p>
                 <p class="swiper-slide__list-item-descr">
-                  1000Р
+                  1000
+                  <span class="swiper-slide__list-item-descr-valute">
+                    ₽
+                  </span>
                 </p>
               </li>
 
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Срок</p>
                 <p class="swiper-slide__list-item-descr">
-                  30-120мин
+                  30-120
+                  <span class="swiper-slide__list-item-descr-time">мин</span>
                 </p>
               </li>
             </ul>
@@ -678,14 +691,18 @@
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Цена</p>
                 <p class="swiper-slide__list-item-descr">
-                  1000Р
+                  1000
+                  <span class="swiper-slide__list-item-descr-valute">
+                    ₽
+                  </span>
                 </p>
               </li>
 
               <li class="swiper-slide__list-item">
                 <p class="swiper-slide__list-item-title">Срок</p>
                 <p class="swiper-slide__list-item-descr">
-                  30-120мин
+                  30-120
+                  <span class="swiper-slide__list-item-descr-time">мин</span>
                 </p>
               </li>
             </ul>
@@ -704,10 +721,48 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
+
+      <div class="services__offer">
+        <p class="services__offer-descr">
+          Все цены указаны с учетом НДС. Стоимость ремонта указана
+          на единичную услугу. Для получения коммерческого
+          предложения на постоянное обслуживание, оставьте заявку.
+        </p>
+        <a class="services__offer-link" href="#">
+          <p class="services__offer-link-text">
+            Получить коммерческое предложение
+          </p>
+          <svg class="swiper-slide__btn-svg" width="8" height="12" viewBox="0 0 8 12" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+              fill="" />
+          </svg>
+        </a>
+      </div>
     </div>
 
   </div>
 
+  <footer class="footer">
+    <div class="container">
+      <ul class="footer__list">
+        <li class="footer__list-item">
+          <span>© 2019 CPS</span>
+          Разработано командой Apesong
+        </li>
+        <li class="footer__list-item">
+          <a href="#">
+            Политика конфиденциальности
+          </a>
+        </li>
+        <li class="footer__list-item">
+          Информация, размещенная
+          на данной странице,
+          не является публичной офертой</li>
+      </ul>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
