--- a/src/index.html
+++ b/src/index.html
@@ -511,7 +511,7 @@
         Цены на услуги
       </p>
 
-      <div class="swiper">
+      <div class="swiper swiper-price">
         <span class="swiper-wrapper__shadow swiper-wrapper__shadow-price"></span>
         <div class="swiper-wrapper swiper-wrapper__techniq">
 
@@ -572,6 +572,7 @@
                 <p class="swiper-slide__list-item-title">Цена</p>
                 <p class="swiper-slide__list-item-descr">
                   1000
+
                   <span class="swiper-slide__list-item-descr-valute">
                     ₽
                   </span>
@@ -720,6 +721,147 @@
 
         </div>
         <div class="swiper-pagination"></div>
+      </div>
+
+      <div class="services__pricelist">
+
+        <ul class="services__pricelist-top">
+          <li class="services__pricelist-top-item services__pricelist-top-item-offer">
+            Ремонтные услуги
+          </li>
+          <li class="services__pricelist-top-item services__pricelist-top-item-price">
+            Цена
+          </li>
+          <li class="services__pricelist-top-item services__pricelist-top-item-time">
+            Срок
+          </li>
+        </ul>
+
+        <ul class="services__pricelist-main">
+
+          <li class="services__pricelist-main-item">
+            <p class="services__pricelist-main-item-name">
+              Диагностика
+            </p>
+            <p class="services__pricelist-main-item-price">
+              Бесплатно
+            </p>
+            <p class="services__pricelist-main-item-time">
+              30
+              <span class="swiper-slide__list-item-descr-time">мин</span>
+            </p>
+
+            <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <p class="swiper-slide__btn-text">Заказать</p>
+              <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                  fill="" />
+              </svg>
+            </button>
+          </li>
+
+          <li class="services__pricelist-main-item">
+            <p class="services__pricelist-main-item-name">
+              Замена дисплея
+            </p>
+            <p class="services__pricelist-main-item-price">
+              1000
+              <span class="swiper-slide__list-item-descr-valute">
+                ₽
+              </span>
+            </p>
+            <p class="services__pricelist-main-item-time">
+              30-120
+              <span class="swiper-slide__list-item-descr-time">мин</span>
+            </p>
+            <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <p class="swiper-slide__btn-text">Заказать</p>
+              <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                  fill="" />
+              </svg>
+            </button>
+          </li>
+
+          <li class="services__pricelist-main-item">
+            <p class="services__pricelist-main-item-name">
+              Замена полифонического динамика
+            </p>
+            <p class="services__pricelist-main-item-price">
+              1000
+              <span class="swiper-slide__list-item-descr-valute">
+                ₽
+              </span>
+            </p>
+            <p class="services__pricelist-main-item-time">
+              30-120
+              <span class="swiper-slide__list-item-descr-time">мин</span>
+            </p>
+            <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <p class="swiper-slide__btn-text">Заказать</p>
+              <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                  fill="" />
+              </svg>
+            </button>
+          </li>
+
+          <li class="services__pricelist-main-item">
+            <p class="services__pricelist-main-item-name">
+              Тестирование с выдачей технического заключения
+            </p>
+            <p class="services__pricelist-main-item-price">
+              1000
+              <span class="swiper-slide__list-item-descr-valute">
+                ₽
+              </span>
+            </p>
+            <p class="services__pricelist-main-item-time">
+              30-120
+              <span class="swiper-slide__list-item-descr-time">мин</span>
+            </p>
+            <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <p class="swiper-slide__btn-text">Заказать</p>
+              <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                  fill="" />
+              </svg>
+            </button>
+          </li>
+
+          <li class="services__pricelist-main-item">
+            <p class="services__pricelist-main-item-name">
+              Замена программного обеспечения
+            </p>
+            <p class="services__pricelist-main-item-price">
+              1000
+              <span class="swiper-slide__list-item-descr-valute">
+                ₽
+              </span>
+            </p>
+            <p class="services__pricelist-main-item-time">
+              30-120
+              <span class="swiper-slide__list-item-descr-time">мин</span>
+            </p>
+            <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <p class="swiper-slide__btn-text">Заказать</p>
+              <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                  fill="" />
+              </svg>
+            </button>
+          </li>
+        </ul>
       </div>
 
       <div class="services__offer">
