--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,89 @@
     </div>
   </div>
 
+  <div class="feedback" id="feedback">
+    <div class="feedback__wrapper">
+      <button class="sidebar__menu-close feedback__menu-close" aria-label="btn close">
+        <svg class="close" width="18" height="18" viewBox="0 0 18 18" fill="" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M2.79337 1.25725C2.40284 0.866725 1.76968 0.866724 1.37915 1.25725L1.257 1.3794C0.86648 1.76992 0.866481 2.40309 1.257 2.79361L7.46353 9.00013L1.25701 15.2067C0.866481 15.5972 0.86648 16.2303 1.257 16.6209L1.37915 16.743C1.76968 17.1335 2.40284 17.1335 2.79337 16.743L8.99989 10.5365L15.2064 16.743C15.5969 17.1335 16.2301 17.1335 16.6206 16.743L16.7428 16.6209C17.1333 16.2303 17.1333 15.5972 16.7428 15.2067L10.5362 9.00013L16.7428 2.79361C17.1333 2.40309 17.1333 1.76992 16.7428 1.3794L16.6206 1.25725C16.2301 0.866724 15.5969 0.866725 15.2064 1.25725L8.99989 7.46377L2.79337 1.25725Z"
+            fill="" />
+        </svg>
+      </button>
+      <div class="feedback__content">
+        <h4 class="feedback__content-title">Обратная связь</h4>
+
+        <form class="feedback__content-form" action="" method="get">
+          <input class="feedback__content-input" type="text" name="name" placeholder="Имя">
+          <input class="feedback__content-input" type="number" name="call" placeholder="Телефон">
+          <input class="feedback__content-input" type="email" name="email" placeholder="Электронная почта">
+          <textarea class="feedback__content-textarea" name="message" placeholder="Сообщение"></textarea>
+
+          <p class="feedback__content-form-text">
+            Нажимая “отправить”, вы даете согласие на
+            <a class="feedback__content-form-data" href="#">
+              обработку персональных данных
+            </a>
+            и соглашаетесь с нашей
+            <a class="feedback__content-form-privacy" href="#">
+              политикой конфиденциальности
+            </a>
+          </p>
+
+          <button class="feedback__content-form-btn" aria-label="btn submit">
+            <p class="feedback__content-form-btn-text">Отправить</p>
+            <svg class="feedback__content-form-btn-svg" width="8" height="12" viewBox="0 0 8 12" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                fill="" />
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="feedback call">
+    <div class="feedback__wrapper">
+      <button class="sidebar__menu-close feedback__menu-close" aria-label="btn close">
+        <svg class="close" width="18" height="18" viewBox="0 0 18 18" fill="" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M2.79337 1.25725C2.40284 0.866725 1.76968 0.866724 1.37915 1.25725L1.257 1.3794C0.86648 1.76992 0.866481 2.40309 1.257 2.79361L7.46353 9.00013L1.25701 15.2067C0.866481 15.5972 0.86648 16.2303 1.257 16.6209L1.37915 16.743C1.76968 17.1335 2.40284 17.1335 2.79337 16.743L8.99989 10.5365L15.2064 16.743C15.5969 17.1335 16.2301 17.1335 16.6206 16.743L16.7428 16.6209C17.1333 16.2303 17.1333 15.5972 16.7428 15.2067L10.5362 9.00013L16.7428 2.79361C17.1333 2.40309 17.1333 1.76992 16.7428 1.3794L16.6206 1.25725C16.2301 0.866724 15.5969 0.866725 15.2064 1.25725L8.99989 7.46377L2.79337 1.25725Z"
+            fill="" />
+        </svg>
+      </button>
+      <div class="feedback__content">
+        <h4 class="feedback__content-title">Заказать звонок</h4>
+
+        <form class="feedback__content-form" action="" method="get">
+          <input class="feedback__content-input" type="number" name="call" placeholder="Телефон">
+
+          <p class="feedback__content-form-text">
+            Нажимая “отправить”, вы даете согласие на
+            <a class="feedback__content-form-data" href="#">
+              обработку персональных данных
+            </a>
+            и соглашаетесь с нашей
+            <a class="feedback__content-form-privacy" href="#">
+              политикой конфиденциальности
+            </a>
+          </p>
+
+          <button class="feedback__content-form-btn" aria-label="btn submit">
+            <p class="feedback__content-form-btn-text">Отправить</p>
+            <svg class="feedback__content-form-btn-svg" width="8" height="12" viewBox="0 0 8 12" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4.5 6L0.707106 2.20711C0.316582 1.81658 0.316582 1.18342 0.707107 0.792893L0.792893 0.707107C1.18342 0.316583 1.81658 0.316583 2.20711 0.707107L6.79289 5.29289C7.18342 5.68342 7.18342 6.31658 6.79289 6.70711L2.20711 11.2929C1.81658 11.6834 1.18342 11.6834 0.792893 11.2929L0.707107 11.2071C0.316583 10.8166 0.316583 10.1834 0.707107 9.79289L4.5 6Z"
+                fill="" />
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <div class="wrapper">
 
     <header class="header">
