--- a/src/index.html
+++ b/src/index.html
@@ -198,9 +198,9 @@
     </div>
   </div>
 
-  <div class="feedback call">
+  <div class="feedback feedback-call" id="feedbackCall">
     <div class="feedback__wrapper">
-      <button class="sidebar__menu-close feedback__menu-close" aria-label="btn close">
+      <button class="sidebar__menu-close feedback__menu-close feedbackcall__menu-close" aria-label="btn close">
         <svg class="close" width="18" height="18" viewBox="0 0 18 18" fill="" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M2.79337 1.25725C2.40284 0.866725 1.76968 0.866724 1.37915 1.25725L1.257 1.3794C0.86648 1.76992 0.866481 2.40309 1.257 2.79361L7.46353 9.00013L1.25701 15.2067C0.866481 15.5972 0.86648 16.2303 1.257 16.6209L1.37915 16.743C1.76968 17.1335 2.40284 17.1335 2.79337 16.743L8.99989 10.5365L15.2064 16.743C15.5969 17.1335 16.2301 17.1335 16.6206 16.743L16.7428 16.6209C17.1333 16.2303 17.1333 15.5972 16.7428 15.2067L10.5362 9.00013L16.7428 2.79361C17.1333 2.40309 17.1333 1.76992 16.7428 1.3794L16.6206 1.25725C16.2301 0.866724 15.5969 0.866725 15.2064 1.25725L8.99989 7.46377L2.79337 1.25725Z"
@@ -980,7 +980,7 @@
                 <span class="swiper-slide__list-item-descr-time">мин</span>
               </p>
 
-              <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <button class="swiper-slide__btn-pricelist" aria-label="btn dropdown">
                 <p class="swiper-slide__btn-text">Заказать</p>
                 <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1005,7 +1005,7 @@
                 30-120
                 <span class="swiper-slide__list-item-descr-time">мин</span>
               </p>
-              <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <button class="swiper-slide__btn-pricelist" aria-label="btn dropdown">
                 <p class="swiper-slide__btn-text">Заказать</p>
                 <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1030,7 +1030,7 @@
                 30-120
                 <span class="swiper-slide__list-item-descr-time">мин</span>
               </p>
-              <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <button class="swiper-slide__btn-pricelist" aria-label="btn dropdown">
                 <p class="swiper-slide__btn-text">Заказать</p>
                 <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1055,7 +1055,7 @@
                 30-120
                 <span class="swiper-slide__list-item-descr-time">мин</span>
               </p>
-              <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <button class="swiper-slide__btn-pricelist" aria-label="btn dropdown">
                 <p class="swiper-slide__btn-text">Заказать</p>
                 <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1080,7 +1080,7 @@
                 30-120
                 <span class="swiper-slide__list-item-descr-time">мин</span>
               </p>
-              <button class="swiper-slide__btn swiper-slide__btn-pricelist" aria-label="btn dropdown">
+              <button class="swiper-slide__btn-pricelist" aria-label="btn dropdown">
                 <p class="swiper-slide__btn-text">Заказать</p>
                 <svg class="swiper-slide__btn-svg swiper-slide__btn-svg-price" width="8" height="12" viewBox="0 0 8 12"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1123,7 +1123,7 @@
             Разработано командой Apesong
           </li>
           <li class="footer__list-item">
-            <a href="#">
+            <a class="footer__list-item-link" href="#">
               Политика конфиденциальности
             </a>
           </li>
