--- a/src/index.html
+++ b/src/index.html
@@ -423,6 +423,12 @@
               рекомендациям и, в свою
               очередь, советуют нас родным и близким.
             </p>
+
+            <p class="content__descr content__descr-text-more">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto eaque repudiandae et nesciunt
+            </p>
+
             <p class="content__descr-more">
               <span class="content__descr-more-svg">
                 <svg width="8" height="11" viewBox="0 0 8 11" fill="" xmlns="http://www.w3.org/2000/svg">
@@ -431,7 +437,9 @@
                     fill="" />
                 </svg>
               </span>
-              Читать далее
+              <span class="content__descr-more content__descr-more-text">
+                Читать далее
+              </span>
             </p>
           </div>
           <img class="content__wrapper-img" src="./img/brend.jpeg" alt="Бренд компании">
@@ -718,14 +726,14 @@
           </div>
           <div class="swiper-pagination"></div>
 
-          <div class="services__dropdown">
-            <svg class="services__dropdown-svg" width="8" height="11" viewBox="0 0 8 11" fill=""
+          <div class="services__dropdown" id="btnTechniq">
+            <svg class="services__dropdown-svg" id="imgSvgTechniq" width="8" height="11" viewBox="0 0 8 11" fill=""
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M6.50008 0.500076L4.00008 3.00008L1.50008 0.500076C1.22393 0.223933 0.776218 0.223933 0.500076 0.500076C0.223933 0.776218 0.223933 1.22393 0.500075 1.50008L3.29297 4.29297C3.68349 4.68349 4.31666 4.68349 4.70718 4.29297L7.50008 1.50008C7.77622 1.22393 7.77622 0.776218 7.50008 0.500076C7.22393 0.223933 6.77622 0.223933 6.50008 0.500076ZM6.50008 6.50008L4.00008 9.00008L1.50008 6.50008C1.22393 6.22393 0.776218 6.22393 0.500076 6.50008C0.223933 6.77622 0.223933 7.22393 0.500075 7.50008L3.29297 10.293C3.68349 10.6835 4.31666 10.6835 4.70718 10.293L7.50008 7.50008C7.77622 7.22393 7.77622 6.77622 7.50008 6.50008C7.22393 6.22393 6.77622 6.22393 6.50008 6.50008Z"
                 fill="" />
             </svg>
-            <p class="services__dropdown-text">Показать все</p>
+            <p class="services__dropdown-text" id="techniqText">Показать все</p>
           </div>
 
         </div>
